--- a/css/index.css
+++ b/css/index.css
@@ -114,11 +114,47 @@
 
 /* *******************  FINALIZA FOOTER *********************** */
 
+/* ******************* INICIA CATEGORIAS PRODUCTOS ******************** */
 .category_ul_container{
     background: #E2E2E2;
     border-radius: 9px;
+    width: 157px;
+    padding: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0px 4px 9px 4px;
 }
 
 .category_ul_container ul{
     list-style: none;
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.categorias_productos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 828px;
+    margin: 0 auto;
+}
+/* ********************* FINALIZA CATEGORIAS PRODUCTOS ******************** */
+.informacion_empresa{
+    width: 910px;
+    margin: 12px auto;
+}
+.contendor_texto_info_empresa{
+    padding: 14px 26px;
+    text-align: justify;
+}
+
+.clientes_carousel_container{
+    width: 900px;
+    margin:0px auto;
 }
